--- a/style.css
+++ b/style.css
@@ -14,8 +14,6 @@ body {
 header {
     width: 1350px;
     padding-top: 46px;
-    padding-left: 0px;
-    padding-right: 0px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin: 0 auto;
@@ -34,16 +32,16 @@ header {
     border: 1px solid white;
 }
 
-.nav-right {
+.nav-menu {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    text-align: right;
 }
 
 .nav-right-block {
-    text-align: right;
+    text-align: center;
     font-weight: lighter;
     font-size: 18px;
+    cursor: pointer;
 }
 
 .nav-right-a:hover {
@@ -52,6 +50,21 @@ header {
     font-size: 18px;
     text-decoration: underline;
     text-underline-offset: 10px;
+}
+
+.hamburger {
+    display: none;
+    z-index: 1;
+    cursor: pointer;
+}
+
+.hamburger-bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    /* -webkit-transition: all .2s ease in ease-in-out; */
+    background-color: #fff;
 }
 
 .menu-icon > .line {
@@ -183,6 +196,7 @@ footer a:link, footer a:visited, footer a:hover, footer a:active {
 
 @media (max-width: 481px) {
     header {
+        padding-top: 19px;
         width: 100%;
         grid-template-columns: 1fr 1fr;
     }
@@ -191,15 +205,54 @@ footer a:link, footer a:visited, footer a:hover, footer a:active {
         margin-left: 12px;
     }
 
+    .nav-menu {
+        display: none;
+    }
+
+    .nav-right {
+        margin-left: auto;
+    }
+
+    .nav-right-block {
+        max-height: 100px;
+    }
+
+    .hamburger {
+        display: block;
+        justify-items: right;
+    }
+
+    .nav-menu.active {
+        width: 100%;
+        position: fixed;
+        top: 0px; 
+        left: 0px;
+        /* bottom: 0px; */
+        height: 100vh;
+        overflow: hidden;
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        padding-top: 100px;
+        background-color: #181719;
+        display: grid;
+        grid-template-columns: 1fr;
+        /* grid-row-gap: -20px; */
+        font-size: 18px;
+        z-index: 1;
+    }
+
+
     main {
         width: 100%;
         grid-template-columns: 1fr;
-        height: 500px;
+        height: 350px;
         padding-top: 38px;
     }
-
+    
     .main-left {
-        height: 210px;
+        height: 100%;
+        grid-row-gap: 20px;
     }
 
     .main-title {
